# langchain-chainlit-agent-walkthrough

./: .gitignore  README.md  pyproject.toml  requirements.txt
fase-02/: test_github_models.py
fase-03/: app.py
fase-03/ai_interface/: messages_interface.py
fase-03/llm_handler/: llm_handler.py
fase-04/: app.py  tools.py
fase-05/: app.py  tools.py
